tests/baselines/reference/returnValueInSetter.errors.txt
==== tests/cases/compiler/returnValueInSetter.ts (1 errors) ====
    class f {
        set x(value) {
            return null; // Should be an error
                   ~~~~
!!! error TS2122: Setters cannot return a value.
        }
    }
    
    